--- a/style.css
+++ b/style.css
@@ -1,40 +1,3 @@
-:root {
-    --white:    rgba(255,255,255,1);
-    --black:    rgb(30,30,30);
-    --lightish: rgba(255,255,255,0.9);
-    --dark:     rgb(60, 60, 60);
-    --darker:   rgba(0,0,0,0.4);
-}
-
-/*theme*/
-
-html {
-    background-color: var(--white);
-    color: var(--dark);
-}
-html, html a {
-    color: var(--dark);
-}
-*::selection {
-    background: var(--dark);
-    color: var(--white);
-}
-
-/*
-@media (prefers-color-scheme: dark) {
-    html {
-        background-color: var(--black);
-    }
-    html, html a {
-        color: var(--light);
-    }
-    *::selection {
-        background: var(--light);
-        color: var(--dark);
-    }
-}
-*/
-
 /*general layout*/
 
 #content {
@@ -49,6 +12,12 @@ html, html a {
     margin-top: 50px;
 }
 
+#theme-toggle {
+    position: absolute;
+    margin-top: 65px;
+    right: 0;
+}
+
 #sidebar {
     position: absolute;
     width: 150px;
@@ -58,10 +27,13 @@ html, html a {
 
 #main {
     position: absolute;
-    width: 610px;
     margin-left: 190px;
     margin-top: 70px;
     padding-bottom: 100px;
+}
+
+#main, pre, pre code.language-c {
+    width: 610px;
 }
 
 /* banner */
@@ -74,6 +46,14 @@ html, html a {
 
 #banner a:hover {
     text-decoration: none;
+}
+
+/* theme button */
+
+#theme-toggle {
+    background-color: var(--trans);
+    border: none;
+    cursor: pointer;
 }
 
 /* sidebar */
@@ -102,7 +82,7 @@ html, html a {
 
 /* text */
 
-html {
+html, button {
     font-family: courier, monospace;
     font-weight: lighter;
     line-height: 1.4;
@@ -134,16 +114,10 @@ hr:before {
     content:" * * * ";
 }
 
-pre {
-    width: 620px;
-}
-
 pre code.language-c {
     display: block;
-    width: 620px;
     overflow-x: scroll;
     overflow-y:hidden;
     font-size: 11px;
-    color: var(--darker);
     line-height: 1;
 }
