--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@
 
 #headings {
     position: fixed;
-    width: 150px;
     margin-top: 70px;
 }
 
@@ -82,6 +81,13 @@
 
 /* text */
 
+* {
+    font-size: 16px;
+}
+h1 {
+    font-size: 18px;
+}
+
 html, button {
     font-family: courier, monospace;
     font-weight: lighter;
@@ -100,8 +106,24 @@ a:hover {
 }
 
 h1 {
-    font-size: 18px;
     margin-top: 30px;
+}
+
+/*mobile*/
+
+@media only screen and (max-device-width: 700px) {
+    * {
+        font-size: 20px;
+    }
+    #sidebar {
+        margin-left: -45px;
+    }
+    #sidebar, #headings {
+        width: 200px;
+    }
+    h1 {
+        font-size: 28px;
+    }
 }
 
 /* other */
@@ -118,6 +140,5 @@ pre code.language-c {
     display: block;
     overflow-x: scroll;
     overflow-y:hidden;
-    font-size: 11px;
     line-height: 1;
 }
