Dark mode select color

--- a/dark.css
+++ b/dark.css
@@ -1,13 +1,3 @@
-:root {
-    --white:    rgba(255,255,255,1);
-    --black:    rgb(30,30,30);
-    --lightish: rgba(255,255,255,0.9);
-    --dark:     rgb(60, 60, 60);
-    --darker:   rgba(0,0,0,0.4);
-    --lighter:  rgba(255,255,255,0.5);
-    --trans:    rgba(0,0,0,0);
-}
-
 /*theme*/
 
 html {
@@ -21,6 +11,6 @@ pre code {
     color: var(--lighter);
 }
 *::selection {
-    background: var(--lightish);
+    background: var(--light);
     color: var(--dark);
 }
