--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+    --white:    rgba(255,255,255,1);
+    --black:    rgb(30,30,30);
+    --lightish: rgba(255,255,255,0.9);
+    --light:    rgb(230,230,230);
+    --dark:     rgb(60, 60, 60);
+    --darker:   rgba(0,0,0,0.4);
+    --lighter:  rgba(255,255,255,0.5);
+    --trans:    rgba(0,0,0,0);
+}
+
 /*general layout*/
 
 #content {
