--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@
     --trans:    rgba(0,0,0,0);
 }
 
-@font-face { 
-font-family: "Myfont"; 
-src: url("Myfont.ttf")format("ttf");
+@font-face {
+    font-family: 'Myfont';
+    src: url('Myfont-Regular.woff2') format('woff2'),
+        url('Myfont-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 /*general layout*/
