--- a/dark.css
+++ b/dark.css
@@ -14,3 +14,6 @@ pre, code, pre code {
     background: var(--light);
     color: var(--dark);
 }
+thead tr th {
+    border-color: var(--white);
+}
