--- a/style.css
+++ b/style.css
@@ -10,8 +10,25 @@
 
 @font-face {
     font-family: 'Myfont';
-    src: url('Myfont-Regular.woff2') format('woff2'),
-        url('Myfont-Regular.woff') format('woff');
+    src: url('font/Myfont-Regular.eot');
+    src: url('font/Myfont-Regular.eot?#iefix') format('embedded-opentype'),
+        url('font/Myfont-Regular.woff2') format('woff2'),
+        url('font/Myfont-Regular.woff') format('woff'),
+        url('font/Myfont-Regular.ttf') format('truetype'),
+        url('font/Myfont-Regular.svg#Myfont-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Hello';
+    src: url('font/C2022-Regular.eot');
+    src: url('font/C2022-Regular.eot?#iefix') format('embedded-opentype'),
+        url('font/C2022-Regular.woff2') format('woff2'),
+        url('font/C2022-Regular.woff') format('woff'),
+        url('font/C2022-Regular.ttf') format('truetype'),
+        url('font/C2022-Regular.svg#C2022-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -161,7 +178,8 @@ pre code {
     font-family: menlo, sans-serif;
 }
 .s {
-    font-family: "Myfont", monospace;
+    font-family: "Hello", monospace;
+    font-size: 1.2em;
 }
 
 /* tables */
