--- a/dark.css
+++ b/dark.css
@@ -1,19 +1,6 @@
-/*theme*/
-
-html {
-    background-color: var(--black);
-    color: var(--dark);
-}
-html, html a, button {
-    color: var(--light);
-}
-pre, code, pre code {
-    color: var(--faded);
-}
-*::selection {
-    background: var(--light);
-    color: var(--dark);
-}
-thead tr th {
-    border-color: var(--white);
+:root {
+    --back:     rgb(30,30,30);
+    --text:     rgb(235,235,235);
+    --fade:     rgb(120,120,120);
+    --trans:    rgba(0,0,0,0);
 }
