--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-:root {
-    --white:    rgba(255,255,255,1);
-    --light:    rgb(230,230,230);
-    --faded:    rgb(170,170,170);
-    --dark:     rgb(60, 60, 60);
-    --black:    rgb(30,30,30);
-
-    --trans:    rgba(0,0,0,0);
-}
-
 @font-face {
     font-family: 'Hello';
     src: url('font/Myfont-Regular.eot');
@@ -21,34 +11,113 @@
     font-display: swap;
 }
 
-/*general layout*/
+
+/*------------------------------------
+# DEFAULT ELEMENTS
+------------------------------------*/
+
+*::selection {
+    background: var(--text);
+    color: var(--back);
+}
+html {
+    background-color: var(--back);
+}
+html, html a, button, pre {
+    color: var(--text);
+    font-family: courier new, monospace;
+    line-height: 1.4;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+}
+h1 {
+    margin: 60px 0px 16px 0px;
+    border-bottom: 1px solid var(--fade);
+    font-size: 24px;
+}
+h2 {
+    margin: 16px 0px 16px 0px;
+}
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+    border-bottom: 0.8px solid var(--text);
+}
+ul li::marker {
+    content: "- ";
+}
+code, pre {
+    display: block;
+    overflow-x: scroll;
+    overflow-y:hidden;
+    color: var(--fade);
+}
+hr {
+    border: 0px solid var(--fade);
+    border-bottom: 1px solid var(--fade);
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+/*
+hr:before {
+    content:" * * * ";
+}
+*/
+
+table {
+    margin: 25px 0px 25px 0px;
+}
+thead tr th {
+    border-color: var(--text);
+    border-bottom: 1px dashed var(--text);
+}
+th {
+    text-align: left;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+
+/*---------------------------------------
+# UNIVERSAL FIELDS
+---------------------------------------*/
+
+/*
+## Layout
+*/
 
 #content {
     position: absolute;
-    width: 800px;
+    width: 890px;
     height: 100%;
     left: 50%;
-    margin-left: -400px;
+    margin-left: -445px;
 }
 
-#banner {
-    margin-top: 50px;
+#sidebar, #main {
+    margin-top: 70px;
 }
 
 #sidebar {
     position: absolute;
-    margin-top: 70px;
 }
 
-#sidebar, #headings {
-    width: 150px;
+#sidebar, #headings, #banner {
+    width: 230px;
     text-align: right;
+}
+
+#sidebar.home #headings {
+    position: static;
 }
 
 #main {
     position: absolute;
-    margin-left: 190px;
-    margin-top: 70px;
+    margin-left: 280px;
     padding-bottom: 100px;
 }
 
@@ -56,155 +125,138 @@
     width: 610px;
 }
 
-.invis {
-    visibility: hidden;
-}
 
-/* banner */
+/*
+## Sidebar
+*/
 
-#banner a {
-    position: absolute;
+
+#banner {
     left: 0px;
-    font-size: 30px;
+    font-weight: normal;
 }
-
+#banner, #banner2 {
+    font-size: 29px;
+}
+#banner2 {
+    transform: scale(-1,1);
+    text-align: right;
+    opacity: 0.3;
+}
+#main #banner2 a {
+    border-bottom: none;
+}
 #banner a:hover {
     text-decoration: none;
+    border-bottom: none;
 }
-
-/* theme button */
-
-#theme-toggle {
-    background-color: var(--trans);
-    border: none;
-    cursor: pointer;
+#pages {
+    position: absolute;
+    margin-top: 58px;
+    width: 100%;
+    text-align: right;
 }
-
-/* sidebar */
-
 #headings {
-    position: fixed;
-    margin-top: 70px;
+    position: absolute;
+    margin-top: 270px;
 }
-
+#sidebar.home #headings a {
+    color: var(--fade);
+}
 #headings a {
     font-weight: normal;
 }
-
 #sidebar a {
     font-weight: normal;
 }
-
 #sidebar a.active {
     font-weight: bold;
 }
-
 #sidebar.contact a.contact {
     font-weight: bold;
 }
 
-/* text */
+/*
+## Invisible header spacer
+*/
 
-html, button, pre, pre code {
-    font-family: courier new, monospace;
-    line-height: 1.4;
-}
-
-* {
-    font-size: 16px;
-}
-h1 {
-    font-size: 18px;
-}
-h2 {
-    margin: 16px 0px 16px 0px;
-}
-pre {
-    line-height: 1.5;
-}
-pre code {
-    font-size: 11px;
+.invis {
+    visibility: hidden;
 }
 
-a {
-    text-decoration: none;
-    font-weight: bold;
+/*
+## Main
+*/
+
+#main a {
+    border-bottom: 0.8px solid var(--text);
 }
 
-a:hover {
-    text-decoration: underline;
-}
 
-h1 {
-    margin-top: 30px;
-}
-
-/* other element types */
-
-hr {
-    border: none;
-    text-align: center;
-}
-hr:before {
-    content:" * * * ";
-}
-
-pre code, pre {
-    display: block;
-    overflow-x: scroll;
-    overflow-y:hidden;
-}
-
-pre, pre code {
-    line-height: 1.2;
-}
-
-/* special classes */
+/*---------------------------------------
+# ANALOG
+---------------------------------------*/
 
 .theta {
     font-family: menlo, sans-serif;
 }
+
+/*
+## Inline script
+*/
+
 .s {
     font-family: "Hello", monospace;
     font-size: 1.2em;
 }
 
-.single+pre code {
-    line-height: 1;
-}
+/*
+## table cell width
+*/
 
-/* tables */
-
-table {
-    margin: 25px 0px 25px 0px;
-}
-thead tr th {
-    border-bottom: 1px dashed var(--black);
-}
 h1#alphabet ~ table td {
     width: 100px;
 }
 
-th {
-    text-align: left;
-    text-transform: uppercase;
-    font-weight: normal;
-}
-
-/* letter tables */
+/*
+## Script font in tables
+*/
 
 .code+table td+td {
     font-family: "hello";
     font-size: 1.1em;
 }
 
-/*lists*/
 
-ul li::marker {
-    content: "- ";
+/*---------------------------------------
+# DIGITAL
+---------------------------------------*/
+
+.ascii+pre code {
+    line-height: 1;
 }
 
-/*mobile*/
+
+/*---------------------------------------
+# APPEARANCE
+---------------------------------------*/
+
+/*
+## Theme Button
+*/
+
+#theme-toggle {
+    background-color: var(--trans);
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 0px;
+}
+
+
+/*---------------------------------------
+# MOBILE
+---------------------------------------*/
 
 @media only screen and (max-device-width: 700px) {
     html, button, pre, pre code {
@@ -213,20 +265,5 @@ ul li::marker {
     .theta+pre {
         font-family: 'Courier New', monospace;
         font-weight: 600;
-    }
-    *, #sidebar, #headings, #theme-toggle {
-        font-size: 20px;
-    }
-    #sidebar {
-        margin-left: -45px;
-    }
-    #sidebar, #headings {
-        width: 200px;
-    }
-    h1 {
-        font-size: 28px;
-    }
-    pre code {
-        font-size: 11px;
     }
 }
