--- a/style.css
+++ b/style.css
@@ -20,6 +20,39 @@
     font-display: swap;
 }
 
+
+/* main {
+    animation: expand 1s;
+    animation-delay: 1s;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+} */
+
+#keyboard-sidebar {
+    display: none;
+}
+
+
+@keyframes expand {
+    0% {
+        width: 300px;
+        height: 450px;
+    }
+
+    30% {
+        width: 300px;
+        height: 450px;
+    }
+
+    100% {
+        width: 650px;
+        height: 100vh;
+    }
+}
+
 #avatar {
     filter: saturate(0) brightness(2);
 }
@@ -32,7 +65,6 @@
     -ms-animation-fill-mode: forwards;
     -o-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
-
 }
 
 
@@ -277,13 +309,11 @@ main {
     position: absolute;
     width: calc(var(--content-width) - var(--left-margin));
     left: var(--left-margin);
-    padding-bottom: 100px;
 }
 
 /*sidebar*/
 
 #sidebar {
-    position: fixed;
     height: 0px;
 }
 
@@ -483,6 +513,14 @@ td:last-child {
 
 @keyframes logo {
     0% {
+        opacity: 0;
+    }
+
+    15% {
+        opacity: 0;
+    }
+
+    20% {
         opacity: 1;
     }
 
