--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     animation-fill-mode: forwards;
 } */
 
+a:hover {
+    cursor: pointer;
+}
+
 #keyboard-sidebar {
     display: none;
 }
@@ -39,12 +43,12 @@
 @keyframes expand {
     0% {
         width: 300px;
-        height: 450px;
+        height: 510px;
     }
 
     30% {
         width: 300px;
-        height: 450px;
+        height: 510px;
     }
 
     100% {
@@ -52,6 +56,39 @@
         height: calc(100vh - 60px);
     }
 }
+
+@keyframes shrink {
+    0% {
+        width: 650px;
+        height: calc(100vh - 60px);
+    }
+
+    100% {
+        width: 300px;
+        height: 510px;
+    }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes disappear {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 
 #avatar {
     filter: saturate(0) brightness(2);
