--- a/style.css
+++ b/style.css
@@ -1,586 +1,208 @@
 :root {
-    --left-width: 190px;
-    --left-align: right;
-    --left-margin: 240px;
-    --content-width: 900px;
-    --table-border: 2px dotted var(--text2);
-    --large-font: 'CMU serif';
+    --content-height: 350px;
+    --main-col-width: 325px;
+    --sidebar-width: 200px;
+    --gutter-width: 30px;
+    --gutter-expanded-width: 60px;
+    --main-col-large-width: 750px;
+
+    --default-font-size: 16px;
 }
 
-@font-face {
-    font-family: 'Myfont';
-    src: url('font/Myfont-Regular.eot');
-    src: url('font/Myfont-Regular.eot?#iefix') format('embedded-opentype'),
-        url('font/Myfont-Regular.woff2') format('woff2'),
-        url('font/Myfont-Regular.woff') format('woff'),
-        url('font/Myfont-Regular.ttf') format('truetype'),
-        url('font/Myfont-Regular.svg#Myfont-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-/* main {
-    animation: expand 1s;
-    animation-delay: 1s;
-    -webkit-animation-fill-mode: forwards;
-    -moz-animation-fill-mode: forwards;
-    -ms-animation-fill-mode: forwards;
-    -o-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
+/* guides */
+/* .banner #author-right */
+/* #sidebar,
+.banner,
+.banner #right-banner,
+.banner #left-banner,
+#main-col,
+main,
+article {
+    border: 1px solid rgba(127, 127, 127, 0.3);
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 2px;
 } */
 
-a:hover {
-    cursor: pointer;
+/* COLORS */
+
+body.light-theme {
+    transition: 0.15s;
+    --background-color: white;
+    --text-primary: black;
+    --text-light: rgba(125, 125, 125, 0.7);
+    --theme-img-filter: none;
 }
 
-#keyboard-sidebar {
-    display: none;
-}
-
-
-@keyframes expand {
-    0% {
-        width: 300px;
-        height: 510px;
-    }
-
-    30% {
-        width: 300px;
-        height: 510px;
-    }
-
-    100% {
-        width: 650px;
-        height: calc(100vh - 60px);
-    }
-}
-
-@keyframes shrink {
-    0% {
-        width: 650px;
-        height: calc(100vh - 60px);
-    }
-
-    100% {
-        width: 300px;
-        height: 510px;
-    }
-}
-
-@keyframes appear {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes disappear {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-
-#avatar {
-    filter: saturate(0) brightness(2);
-}
-
-#logo {
-    display: none;
-    animation: logo 4.2s;
-    -webkit-animation-fill-mode: forwards;
-    -moz-animation-fill-mode: forwards;
-    -ms-animation-fill-mode: forwards;
-    -o-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-}
-
-
-#avatar {
-    position: absolute;
-    bottom: 12px;
-    left: 165px;
-}
-
-#avatar img {
-    width: 40px;
-    image-rendering: pixelated;
-}
-
-/*------------------------------------
-# DEFAULT ELEMENTS
-------------------------------------*/
-
-body {
-    margin: 0px;
-    background-color: var(--back);
-    color: var(--text);
-}
-
-*::selection {
-    background: var(--text);
-    color: var(--back);
+body.dark-theme {
+    transition: 0.15s;
+    --background-color: rgb(25, 25, 25);
+    --text-primary: white;
+    --text-light: rgba(125, 125, 125, 0.7);
+    --theme-img-filter: invert(1) saturate(1.5) hue-rotate(180deg) brightness(0.95);
 }
 
 html,
-a,
-button,
-pre {
-    color: var(--text);
-    font-family: 'Courier New', Courier, monospace;
-    line-height: 1.2;
-    font-size: 15px;
+body {
+    margin: 0px;
+    background-color: var(--background-color);
 }
 
-p,
-ul,
-ol,
-table {
-    margin-left: 30px;
-    line-height: 1.5;
+/* .dark-img {
+    filter: invert(1) saturate(1.5) hue-rotate(180deg) brightness(0.95);
 }
 
-li {
-    margin-bottom: 10px;
+.light-img {
+    filter: invert(0) saturate(1) hue-rotate(0deg) brightness(1);
+} */
+
+#legend {
+    filter: var(--theme-img-filter);
 }
 
-table {
-    margin-right: 20px;
+/* navigation */
+
+.hidden {
+    display: none;
+    opacity: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: 100;
-    color: var(--text3);
-    font-family: var(--large-font);
-}
-
-h2 {
-    font-size: 18px;
-    font-weight: 800;
-    text-align: center;
-    border-bottom: 1px solid var(--fade);
-    margin-top: 40px;
-    padding-bottom: 5px;
-}
-
-h3 {
-    font-size: 15px;
-    font-weight: 800;
-    text-align: left;
-    margin-top: 30px;
-}
-
-h4 {
-    font-size: 15px;
-    font-weight: 600;
-    text-align: left;
-    margin-top: 25px;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-ul li::marker {
-    content: "- ";
-}
-
-code,
-pre {
+.visible {
+    opacity: 1;
     display: block;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    color: var(--text);
 }
 
-hr {
-    border: 0px solid var(--fade);
-    border-bottom: 1px solid var(--fade);
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+/* layout */
+
+#content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-table,
-pre {
-    margin-top: 30px;
+#content.expand {
+    transition: height 0.1s ease-in-out 0.1s, width 0.3s ease-in-out 0.3s;
+    height: 90vh;
+    width: calc(var(--sidebar-width) + var(--gutter-width) + var(--main-col-large-width));
+}
+
+#content.shrink {
+    display: flex;
+    justify-content: space-between;
+    transition: width 0.1s ease-in-out 0.1s, height 0.3s ease-in-out 0.3s;
+    height: var(--content-height);
+    width: calc(var(--sidebar-width) + var(--gutter-width) + var(--main-col-width));
+}
+
+.banner {
+    height: 100px;
+}
+
+#sidebar {
+    position: fixed;
+    width: var(--sidebar-width);
+    height: var(--content-height);
+    text-align: right;
+}
+
+#sidebar nav section {
     margin-bottom: 40px;
 }
 
-table {
-    border-collapse: collapse;
-    line-height: 1.7;
+#sidebar.expanded nav section {
+    border-right: 1px solid var(--text-light);
+    padding-right: 10px;
 }
 
-th {
-    text-align: left;
-    font-weight: normal;
-    min-width: 60px;
-    font-family: courier, "Courier New", monospace;
+#main-col {
+    width: var(--main-col-width);
+    height: var(--content-height);
 }
 
-th,
-td {
-    padding: 0px 15px;
+#main-col {
+    margin-left: calc(var(--sidebar-width) + var(--gutter-width));
 }
 
-
-/*---------------------------------------
-# OTHER TEXT STYLING
----------------------------------------*/
-
-.no-margin {
-    margin-left: 0px;
-}
-
-.first,
-.first a {
-    font-family: courier, 'Courier New', monospace;
-    font-size: 1rem;
-    /* text-indent: -30px; */
-}
-
-#article .first a {
-    font-family: 'Courier New', courier, monospace;
-}
-
-.ascii-art {
-    font-family: 'Courier New', courier, monospace;
-}
-
-.ascii-art .theta {
-    font-family: "Lucida Console", "Andale Mono", "Menlo", "Courier New", monospace;
-}
-
-.text-center {
-    text-align: center;
-}
-
-
-/*---------------------------------------
-# UNIVERSAL FIELDS
----------------------------------------*/
-
-/*
-## Content
-*/
-
-#content {
-    position: absolute;
-    width: var(--content-width);
-    left: 50%;
-    margin-left: -450px;
-}
-
-/*
-## Banner
-*/
-
-/* apply to both */
-
-header.banner {
-    height: fit-content;
+#main-col.expand {
+    transition: width 0.3s ease-in-out 0.3s, margin 0.3s ease-in-out 0.3s;
+    width: var(--main-col-large-width);
     position: relative;
-    margin: 110px 0px 80px 0px;
+    height: 100%;
+    margin-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
 }
 
-header.banner a {
-    font-size: 24px;
+#main-col.shrink {
+    position: fixed;
+    transition: width 0.1s ease-in-out 0.1s, margin 0.3s ease-in-out 0.1s, height 0.3s ease-in-out 0.3s;
+    width: var(--main-col-width);
+    height: var(--content-height);
+    margin-left: calc(var(--sidebar-width) + var(--gutter-width));
 }
 
-/* left */
+/* text */
 
-#banner-left {
-    text-align: right;
-    width: var(--left-width);
-    text-align: var(--left-align);
+body,
+#theme-toggle {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: var(--default-font-size);
+    color: var(--text-primary);
 }
 
-#banner-left a {
-    font-weight: 600;
-    font-family: var(--large-font);
+a,
+button {
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--text-primary);
 }
 
-#author {
-    position: absolute;
-    width: var(--left-width);
-    text-align: var(--left-align);
-    font-size: 14px;
+#sidebar nav a,
+#sidebar #theme-toggle,
+.banner #name-right,
+.banner #author-right {
+    color: var(--text-light);
 }
 
-/* right */
+.name {
+    font-size: 25px;
+}
 
-main .banner {
-    position: relative;
+.banner #name-right,
+.banner #name-right a,
+.banner #author-right {
     transform: scale(-1, 1);
     text-align: right;
 }
 
-main .banner * {
-    color: var(--fade);
+#home h3,
+#sidebar h3 {
+    font-size: var(--default-font-size);
+    font-weight: 500;
+    text-decoration: underline;
 }
 
-/* 
-## Page
- */
-
-main {
-    position: absolute;
-    width: calc(var(--content-width) - var(--left-margin));
-    left: var(--left-margin);
+#home .hobby {
+    margin-bottom: 40px;
 }
 
-/*sidebar*/
-
-#sidebar {
-    height: 0px;
-}
-
-#pages,
-#headings {
-    width: var(--left-width);
-    text-align: var(--left-align);
-}
-
-#pages {
-    position: relative;
-    top: 8px;
-}
-
-#headings {
-    position: relative;
-    top: 80px;
-}
-
-#sidebar.home #headings a {
-    color: var(--fade);
-}
-
-#headings a {
-    font-weight: normal;
-}
-
-#headings a {
-    font-weight: normal;
-}
-
-#sidebar a.active {
-    font-weight: bold;
-}
-
-#sidebar.contact a.contact {
-    font-weight: bold;
-}
-
-#theme-toggle,
-#show-logo {
-    color: var(--fade);
-    background-color: var(--trans);
+#theme-toggle {
     border: none;
-    cursor: pointer;
-    font-size: 15px;
-    padding: 0px;
+    background: none;
 }
 
-/*article*/
+/* images? */
 
-#article a {
-    border-bottom: 0.9px solid var(--text);
-    padding-bottom: 1px;
-    font-family: courier, "courier new", monospace;
+img {
+    max-width: 100%;
 }
 
-/*universal filters*/
-
-.invert {
-    filter: invert(1);
-}
-
-
-/*---------------------------------------
-# HOME
----------------------------------------*/
-
-#home-box p {
-    margin: 0.6em 0em;
-}
-
-/*---------------------------------------
-# ANALOG
----------------------------------------*/
-
-/*
-## Manuscript images
-*/
-
-.img-manuscript {
-    display: block;
-    margin: 20px auto 20px auto;
-    max-width: 90%;
-}
-
-#hi-buddy {
-    transform: rotate(-1deg);
-}
-
-#hello-there {
-    width: 200px;
-    transform: rotate(5deg);
-}
-
-/*
-## Inline script
-*/
-
-.s {
-    font-family: "Myfont", monospace;
-    font-size: 1.2em;
-}
-
-/*
-## table cell width
-*/
-
-.large-table {
-    width: calc(100% - 40px);
-}
-
-.small-table td {
-    width: 100px;
-    border-bottom: 0px solid var(--fade) !important;
-}
-
-/*
-## Script font in tables
-*/
-
-.code-table td+td {
-    font-family: "Myfont";
-    font-size: 1.1em;
-}
-
-/* table borders v1*/
-
-/* .six-col tr:nth-of-type(1) th,
-.six-col tr+tr th:nth-of-type(even),
-.six-col td:nth-of-type(even) {
-    border-right: var(--table-border);
-}
-
-.seven-col tr:nth-of-type(1) th,
-.seven-col tr+tr th:nth-of-type(odd),
-.seven-col td:nth-of-type(odd) {
-    border-right: var(--table-border);
-}
-
-tr:last-child {
-    border-bottom: var(--table-border);
-} */
-
-
-/* table borders v2 */
-
-thead tr:first-child {
-    background: radial-gradient(circle at bottom, var(--text2) 2px, transparent 0px) repeat-x;
-    background-size: 6px 1.5px;
-}
-
-tbody tr:last-child {
-    background: radial-gradient(circle at top, var(--text2) 2px, transparent 0px) repeat-x bottom;
-    background-size: 6px 1.5px;
-}
-
-tbody tr:first-child {
-    background: radial-gradient(circle at bottom, var(--text2) 2px, transparent 0px) repeat-x;
-    background-size: 6px 1.5px;
-}
-
-table {
-    background: radial-gradient(circle at right, var(--text2) 2px, transparent 0px) repeat-y;
-    background-size: 1.5px 6px;
-}
-
-.six-col td:nth-of-type(even),
-.six-col tr:first-child th,
-.six-col tr+tr th:nth-of-type(even) {
-    background: radial-gradient(circle at left, var(--text2) 2px, transparent 0px) repeat-y right;
-    background-size: 1.5px 6px;
-}
-
-.seven-col td:nth-of-type(odd),
-.seven-col tr:first-child th,
-.seven-col tr+tr th:nth-of-type(odd) {
-    background: radial-gradient(circle at left, var(--text2) 2px, transparent 0px) repeat-y right;
-    background-size: 1.5px 7px;
-}
-
-th:last-child,
-td:last-child {
-    background: radial-gradient(circle at left, var(--text2) 2px, transparent 0px) repeat-y right;
-    background-size: 1.5px 6px;
-}
-
-.small-table th:last-child,
-.small-table td:last-child {
-    background: radial-gradient(circle at left, var(--text2) 2px, transparent 0px) repeat-y right;
-    background-size: 1.5px 7px;
-}
-
-
-/*---------------------------------------
-# MOBILE
----------------------------------------*/
-
-@keyframes logo {
+@keyframes main-col-margin {
     0% {
-        opacity: 0;
-    }
-
-    15% {
-        opacity: 0;
-    }
-
-    20% {
-        opacity: 1;
-    }
-
-    90% {
-        opacity: 1;
+        margin-left: calc(var(--sidebar-width) + var(--gutter-width));
     }
 
     100% {
-        opacity: 0;
-    }
-}
-
-@keyframes home-box {
-    0% {
-        opacity: 0;
-    }
-
-    90% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
+        margin-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
     }
 }
