--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --content-height: 22rem;
+    --content-height: 19rem;
     --sidebar-width: 14rem;
     --main-col-width: 15rem;
     --gutter-width: 2rem;
@@ -9,6 +9,7 @@
     --default-font-size: 18px;
 
     --h3-margin: 1rem 0rem;
+    --home-section-spacing: 2rem;
 
     --full-trans: ;
     --second-half-trans: 0.3s ease-in-out 0.2s;
@@ -53,24 +54,6 @@ html {
     font-size: var(--default-font-size);
 }
 
-@media only screen and (max-width: 850px) {
-    :root {
-        --default-font-size: 15px;
-    }
-}
-
-@media only screen and (max-width: 650px) {
-    :root {
-        --default-font-size: 12px;
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    :root {
-        --default-font-size: 10px;
-    }
-}
-
 html,
 body {
     margin: 0rem;
@@ -92,11 +75,13 @@ body {
 /* navigation */
 
 .hidden {
+    transition: 0.1s;
     display: none;
     opacity: 0;
 }
 
 .visible {
+    transition: 0.1s;
     opacity: 1;
     display: block;
 }
@@ -128,7 +113,7 @@ body {
 #banner-left.shrink,
 #banner-right.shrink {
     transition: var(--first-half-trans);
-    height: 6rem;
+    margin-bottom: calc(1.5 * var(--home-section-spacing));
 }
 
 #banner-left.expand,
@@ -140,7 +125,6 @@ body {
 #sidebar {
     position: fixed;
     width: var(--sidebar-width);
-    height: var(--content-height);
     text-align: right;
 }
 
@@ -149,7 +133,7 @@ body {
 }
 
 #sidebar nav section {
-    margin-bottom: 2rem;
+    margin-bottom: var(--home-section-spacing);
 }
 
 #main-col {
@@ -221,7 +205,7 @@ h3 {
 }
 
 #home .hobby {
-    margin-bottom: 1.5rem;
+    margin-bottom: var(--home-section-spacing);
 }
 
 #theme-toggle {
@@ -242,5 +226,55 @@ img {
 
     100% {
         margin-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    :root {
+        --default-font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    :root {
+        --default-font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    :root {
+        --default-font-size: 11px;
+    }
+
+    #content.shrink {
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #sidebar {
+        text-align: center;
+        position: relative;
+    }
+
+    #sidebar #banner-left {
+        display: none;
+    }
+
+    #sidebar #website-link {
+        display: none;
+    }
+
+    #main-col.shrink {
+        position: relative;
+        margin-left: 0px;
+        text-align: center;
+    }
+
+    #name-right,
+    #name-right a,
+    #author-right {
+        transform: scale(1, 1);
+        text-align: center;
     }
 }
