--- a/style.css
+++ b/style.css
@@ -146,9 +146,9 @@ body {
 }
 
 #main-col.expand {
+    position: absolute;
     transition: width 0.3s ease-in-out 0.3s, margin 0.3s ease-in-out 0.3s;
     width: var(--main-col-large-width);
-    position: relative;
     height: 100%;
     margin-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
 }
