--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ body {
     text-align: right;
 }
 
+#sidebar.home {
+    position: relative;
+}
+
 #back {
     margin: var(--h3-margin);
 }
@@ -154,7 +158,7 @@ body {
 }
 
 #main-col.shrink {
-    position: fixed;
+    position: absolute;
     transition: width 0.1s ease-in-out 0.1s, margin 0.3s ease-in-out 0.1s, height 0.3s ease-in-out 0.3s;
     width: var(--main-col-width);
     height: var(--content-height);
@@ -219,6 +223,8 @@ img {
     max-width: 100%;
 }
 
+/* keyframes */
+
 @keyframes main-col-margin {
     0% {
         margin-left: calc(var(--sidebar-width) + var(--gutter-width));
@@ -229,11 +235,15 @@ img {
     }
 }
 
+/* some folding phones portrait, mid phones landscape */
+
 @media only screen and (max-width: 800px) {
     :root {
         --default-font-size: 16px;
     }
 }
+
+/* huuuge phones portrait? mid phones landscape (height) */
 
 @media only screen and (max-width: 600px),
 (max-height: 500px) {
@@ -242,11 +252,15 @@ img {
     }
 }
 
+/* small phones landscape */
+
 @media only screen and (max-height: 450px) {
     :root {
         --default-font-size: 14px;
     }
 }
+
+/* most phones portrait */
 
 @media only screen and (max-width: 475px) {
     :root {
