--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     --main-col-width: 14.5rem;
     --gutter-width: 2rem;
     --gutter-expanded-width: 3.5rem;
-    --main-col-large-width: 50rem;
+    --main-col-large-width: 45rem;
 
     --default-font-size: 18px;
 
@@ -101,7 +101,7 @@ body {
     transition: height 0.1s ease-in-out 0.1s, width 0.3s ease-in-out 0.3s;
     height: 90vh;
     width: calc(var(--sidebar-width) + var(--gutter-width) + var(--main-col-large-width));
-    max-width: 90%;
+    max-width: 90vw;
 }
 
 #content.shrink {
@@ -129,7 +129,7 @@ body {
     width: var(--sidebar-width);
     text-align: right;
     max-height: 95vh;
-    overflow: scroll;
+    overflow: auto;
     padding-right: 1rem;
 }
 
@@ -148,31 +148,27 @@ body {
 #main-col {
     width: var(--main-col-width);
     height: var(--content-height);
-}
-
-#main-col {
-    margin-left: calc(var(--sidebar-width) + var(--gutter-width));
+    max-width: 90vw;
+    box-sizing: border-box;
 }
 
 #main-col.expand {
     position: absolute;
     transition: width 0.3s ease-in-out 0.3s, margin 0.3s ease-in-out 0.3s;
-    width: var(--main-col-large-width);
-    max-width: -webkit-fill-available;
+    width: calc(var(--sidebar-width) + var(--gutter-width) + var(--main-col-large-width));
+    /* max-width: -webkit-fill-available;
     max-width: -moz-available;
-    /* WebKit-based browsers will ignore this. */
     max-width: -webkit-fill-available;
-    /* Mozilla-based browsers will ignore this. */
-    max-width: fill-available;
-    margin-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
+    max-width: fill-available; */
+    padding-left: calc(var(--sidebar-width) + var(--gutter-expanded-width));
 }
 
 #main-col.shrink {
     position: absolute;
     transition: width 0.1s ease-in-out 0.1s, margin 0.3s ease-in-out 0.1s, height 0.3s ease-in-out 0.3s;
-    width: var(--main-col-width);
+    width: calc(var(--sidebar-width) + var(--gutter-width) + var(--main-col-width));
     height: var(--content-height);
-    margin-left: calc(var(--sidebar-width) + var(--gutter-width));
+    padding-left: calc(var(--sidebar-width) + var(--gutter-width));
 }
 
 main {
@@ -294,10 +290,15 @@ img {
         width: var(--content-width-mobile);
     }
 
+    #content.expand {
+        width: 90vw;
+    }
+
     #sidebar {
         text-align: center;
         position: relative;
         margin-top: var(--home-section-spacing);
+        padding-right: 0rem;
     }
 
     #sidebar #banner-left {
