--- a/style.css
+++ b/style.css
@@ -115,6 +115,17 @@ nav:not(#home-nav) {
     display: none;
 }
 
+/* adaptive layout */
+
+/* #content.mobile #main-col {
+    position: relative;
+}
+
+#content.mobile.home {
+    min-height: var(--);
+} */
+
+
 /* text */
 
 body,
@@ -133,6 +144,16 @@ button {
     color: var(--text-primary);
 }
 
+pre.button {
+    font-family: Courier, monospace;
+    /* color: var(--text-light); */
+    text-align: center;
+}
+
+code {
+    border-bottom: 1px dashed var(--text-primary);
+}
+
 #sidebar nav a,
 #sidebar #theme-toggle,
 #name-right,
@@ -140,7 +161,8 @@ button {
     color: var(--text-light);
 }
 
-.name {
+#name-left,
+#name-right {
     font-size: 1.6rem;
 }
 
