--- a/style.css
+++ b/style.css
@@ -72,14 +72,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
 
 #content {
     display: flex;
     width: var(--content-width-sm);
     max-width: 90vw;
-    max-height: 90vh;
+    max-height: 90%;
 }
 
 #sidebar {
