--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ body.dark-theme {
 html,
 body {
     font-size: var(--default-font-size);
-    margin: 0rem;
     background-color: var(--background-color);
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
 }
 
 #legend {
