--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 100px);
-    margin: 50px 0px;
+    height: 100vh;
+    /* margin: 50px 0px; */
 }
 
 #content {
