--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     display: flex;
     width: var(--content-width-sm);
     max-width: 90vw;
-    max-height: 100%;
+    max-height: 90vh;
 }
 
 #sidebar {
