--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body {
     background-color: var(--background-color);
 }
 
+body {
+    height: 80vh;
+    width: 100vw;
+    margin: 10vh 0vh;
+}
+
 #legend {
     filter: var(--theme-img-filter);
 }
@@ -69,7 +75,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     /* margin: 50px 0px; */
 }
 
@@ -77,7 +83,7 @@ body {
     display: flex;
     width: var(--content-width-sm);
     max-width: 90vw;
-    max-height: 90vh;
+    max-height: 100vh;
 }
 
 #sidebar {
