mobile home links swap

--- a/style.css
+++ b/style.css
@@ -291,11 +291,23 @@ img {
     }
 }
 
+/* anything that is not phone portrait */
+
+@media only screen and (min-width: 500px) {
+    .mobile {
+        display: none;
+    }
+}
+
 /* most phones portrait */
 
 @media only screen and (max-width: 500px) {
     :root {
         --default-font-size: 13px;
+    }
+
+    .desktop {
+        display: none;
     }
 
     #content {
